# Griffith-Droid-Racer

./: .gitignore  README.txt  startDroid.sh
Arduino/jetson_esc_new/: jetson_esc_new.ino
CodeThatActuallyWorks/: client.py  server.py
Droid Code v1/: README.txt
Droid Code v1/zed_code/: CMakeLists.txt  CMakeLists.txt~
Droid Code v1/zed_code/include/: colorDetection.h  kernel.cuh  laneDetection.h~  zedGPU.h
Droid Code v1/zed_code/src/: colorDetection.h~  kernel.cu  laneDetection.cpp  main.cpp~  zedGPU.cpp~
Droid Code v2/: README.txt  colorClassifier.h  colorClassifierFactory.hpp  fuzzyColor.h
Droid Code v2/Prev Live Build/: CMakeLists.txt  README.txt  README.txt~  fuzzyColorOld.cpp  link_copy
Droid Code v2/Prev Live Build/include/: colorClassifier.h  colorClassifier.h~  colorClassifierFactory.cpp~  colorClassifierFactory.h  colorClassifierFactory.h~  fuzzyColor.h~  jetsonGPIO.h  zedGPU.h~
Droid Code v2/Prev Live Build/src/: colorClassifierFactory.cpp  colorDetection.cpp  colorDetection.cpp~  fuzzyColor.cpp  fuzzyColor.cpp~  fuzzyColor.h~  fuzzyColourOLD.cpp  laneDetection.cpp~  laneDetection.h~  main.cpp  main.cpp~
Droid Code v2/ardunio/: jetson_esc_new.ino
Droid Code v2/ardunio/ArduinoMotor/: ArduinoMotor.ino
Droid Code v2/include/: colorClassifier.h
Droid Code v2/src/: colorClassifierFactory.cpp  droidRacer.cpp  fuzzyColor.cpp  zedGPU.cpp
Droid Code v3/: Main.cpp  ReadMe.txt  UDPClient.h  UDPVideoProtocol.h  colorDetection.cpp  droidCarV3.cpp  fuzzyColor.cpp  fuzzyColor.h  opencvproperties3.props  serialPort.cpp  serialPort.h  socketReceive.hpp  stdafx.cpp
Droid Code v4/: CMakeLists.txt  README.md  README.txt  main.cpp
Droid Code v4/arduino/: README.md
Droid Code v4/arduino/manager/: Groid.cpp  Groid.h
Droid Code v4/client/: client  client.cpp  client.py
Droid Code v4/droid/: ArduinoController.cpp  ArduinoController.h  EngineController.cpp  EngineController.h  SerialPort.cpp  SerialPort.h  server  server.cpp
Droid Code v4/examples/: basiccamera  basiccamera.cpp
Droid Code v4/res/catch2/: catch2.hpp
Droid Code v5/: .gitignore
Droid Code v5/arduino/: README.md
PiSocket/SocketReceive/: SocketReceive.cbp  SocketReceive.depend  main.cpp
PiSocket/SocketString/: SocketString.cbp  SocketString.depend  SocketString.layout  main.cpp
Serial Connection/: README.txt
Serial Connection/Ardunio Code/: calibration.ino
Serial Connection/Droid Side/: ArduinoStream.h  arduinoC.cpp  main.cpp  serialArd.c  serialClass.cpp  serialClass.h  serialCpp.cpp  serialTest2.cpp
droid_code_v4/arduino/: README.md  manager.ino
include/: laneDetection.h
send_data_to_rebound/: client_send_code.py  server_send_code.py
src/: main.cpp
transmit_video_code/: camera.py  main.py
(+17 files in other folders)
